elg_one_bri/slurm-14746006.out
  File "./slurm_test_init.sh", line 5
    export PYTHONPATH=$CSCRATCH_OBIWAN/obiwan_code/py:$CSCRATCH_OBIWAN/legacypipe/py:$PYTHONPATH  
                    ^
SyntaxError: invalid syntax
